bevy_elf_macros/tests/ui/fail/empty_type_attr_with_parens.rs
use bevy_elf_macros::FromDef;

#[derive(FromDef)]
#[elf()]
#[allow(unused)]
struct Foo {
    x: bool,
}

fn main() {}
